--- a/flat-buttons.css
+++ b/flat-buttons.css
@@ -4,7 +4,7 @@
 .action:link,
 button,
 .current,
-.actions label {
+.actions label, button[type="submit"], button {
     border: none;
     background-image: none;
     box-shadow: none;
@@ -78,7 +78,7 @@ dl.index dd,
 .unwrangled,
 .unreviewed,
 .ui-sortable li:hover,
-#header .primary .menu .current {
+#header .primary .menu .current, button[type="submit"]:hover, button:hover {
     border-color: initial;
     box-shadow: none !important;
 }
@@ -138,7 +138,7 @@ ul.notes,
 .actions input:focus,
 label.action:hover,
 .action:hover,
-.action:focus {
+.action:focus, button[type="submit"]:hover, button:hover {
     border: none;
     box-shadow: none;
 }
@@ -175,5 +175,3 @@ button,
     filter: none;
 
 }
-
-
