--- a/flat-buttons.css
+++ b/flat-buttons.css
@@ -6,37 +6,36 @@
 button,
 .current,
 .actions label,
-button[type="submit"] {
-    border: none;
-    background-image: none;
-    box-shadow: none;
-    -webkit-appearance: none;
+button[type="submit"] {border: none;
+  background-image: none;
+  box-shadow: none;
+  -webkit-appearance: none;
 }
 
 .actions input,
 input[type="submit"],
 textarea {
-    border: 1px solid;
-    background-image: none;
-    box-shadow: none;
-    -webkit-appearance: none;
+  border: 1px solid;
+  background-image: none;
+  box-shadow: none;
+  -webkit-appearance: none;
 }
 
 input {
-    width: 96%;
-    border: 1px solid;
-    background-image: none;
-    box-shadow: none;  
+  width: 96%;
+  border: 1px solid;
+  background-image: none;
+  box-shadow: none;  
 }
 
 .actions input[type="checkbox"]{
-        -webkit-appearance: checkbox;
-        -moz-appearance: checkbox;
+  -webkit-appearance: checkbox;
+  -moz-appearance: checkbox;
 }
 
 
 form.search input[type="text"] {
-    border-top-color: initial;
+  border-top-color: initial;
 }
 
 .actions a:hover,
@@ -100,7 +99,7 @@ form blockquote.userstuff,
 .delete a,
 span.delete,
 #header ul.primary {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 .notice,
@@ -121,8 +120,8 @@ label.action:hover,
 .action:focus,
 button[type="submit"]:hover,
 button:hover {
-    border: none;
-    box-shadow: none;
+  border: none;
+  box-shadow: none;
 }
 
 .listbox .index,
@@ -140,16 +139,16 @@ input[type="submit"],
 button,
 .current,
 .actions label {
-    border: none;
-    border-bottom: none;
-    background-image: none;
-    box-shadow: none;
+  border: none;
+  border-bottom: none;
+  background-image: none;
+  box-shadow: none;
 }
 
 #header .menu,
 #small_login,
 #header .dropdown:hover .current+.menu {
-    box-shadow: none;
-    background-image: none;
-    filter: none;
+  box-shadow: none;
+  background-image: none;
+  filter: none;
 }
